<resources>
    <string name="app_name">Entrega Ágil</string>

    <string name="subtitulo_app">Controle de rotas</string>
    <string name="faca_login_para_continuar">Por favor faça login para continuar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="logar">Login</string>
    <string name="nao_tem_conta_cadastrar">Não tem um conta? <b><font color='#03A9F4'>CADASTRE-SE</font></b></string>
    <string name="cadastro_de_um_novo_usuario">Cadastro de um novo usuário</string>
    <string name="text_to_sign_in">Já possui uma conta? <b><font color='#03A9F4'>LOGIN</font></b></string>
    <string name="falha_login">Não foi possível fazer o login </string>
    <string name="erro_cadastrar">Não foi possível cadastrar o usuário</string>
    <string name="ate">até</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cadastrados">Cadastrados</string>
    <string name="assinantes">Assinantes</string>
    <string name="selecione_um_assinante">Selecione um assinante</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="maximo_rota_atingido">Só é possível ter no máximo 9 assinantes por rota</string>
    <string name="alterar_descrica_rota">Alterar descricao da rota</string>
    <string name="confirmacao">Confirmação</string>
    <string name="confirmacao_exclusao_assinante">Este assinante será retirado dessa rota, deseja continuar?</string>
    <string name="sim">Sim</string>
    <string name="nao">nao</string>
    <string name="confirmacao_exclusao_rota">Esta rota será excluída, deseja continuar?</string>
    <string name="formulario_assinante">Formulario de assinante</string>
    <string name="descricao_nova_rota">Descrição da nova rota</string>
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>
    <string name="rotas">Rotas</string>
    <string name="config">Configuração</string>
    <string name="total_rotas">Total de rotas</string>
    <string name="total_assinante">Total de assinantes</string>
    <string name="assinantes_sem_rotaas">Assinantes sem rotas</string>
    <string name="sair">Sair</string>
    <string name="salvar">Salvar</string>
    <string name="complemento">Complemento</string>
    <string name="nome">Nome</string>
    <string name="sem_rota_vinculada">Sem rota vínculada</string>
    <string name="erro_edit_text_email">Preencha o email</string>
    <string name="erro_edit_text_senha">Preencha a senha</string>
    <string name="erro_verique_informacoes">Verifique as Informações</string>
    <string name="erro_edit_text_nome">Preencha o nome</string>
    <string name="inicio_assinatura">Inicio da assinatura</string>
    <string name="termino_assinatura">Fim da assinatura</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="title_activity_maps">Map</string>
</resources>
