<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/acitivity_login_titulo_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_title_app"
        android:layout_marginStart="@dimen/margin_layout"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/acitivity_login_mensagem_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_reguler"
        android:text="@string/faca_login_para_continuar"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintStart_toStartOf="@+id/acitivity_login_titulo_app"
        app:layout_constraintTop_toBottomOf="@+id/acitivity_login_titulo_app" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/acitivity_login_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_input_layout"
        android:layout_marginStart="@dimen/margin_layout"
        android:layout_marginEnd="@dimen/margin_layout"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acitivity_login_mensagem_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/acitivity_login_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorPrimaryText"
            android:textSize="@dimen/text_body_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/acitivity_login_layout_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/acitivity_login_layout_email"
        app:layout_constraintStart_toStartOf="@+id/acitivity_login_layout_email"
        app:layout_constraintTop_toBottomOf="@+id/acitivity_login_layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/acitivity_login_input_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryText"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorPrimaryText"
            android:textSize="@dimen/text_body_size" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/acitivity_login_bota_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_btn"
        android:background="@color/colorAccent"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/logar"
        android:textColor="@color/colorTextORIcon"
        android:textSize="@dimen/text_btn_size"
        app:layout_constraintEnd_toEndOf="@+id/acitivity_login_layout_senha"
        app:layout_constraintStart_toStartOf="@+id/acitivity_login_layout_senha"
        app:layout_constraintTop_toBottomOf="@+id/acitivity_login_layout_senha" />

    <TextView
        android:id="@+id/acitivity_login_cadastrar_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_standard"
        android:fontFamily="@font/nunito_sans_reguler"
        android:text="@string/nao_tem_conta_cadastrar"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_caption_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>