<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp">

        <EditText
            android:id="@+id/fragment_formulario_assinante_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/nome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fragment_formulario_assinante_endereco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/endereco"
            app:layout_constraintEnd_toStartOf="@id/fragment_formulario_assinante_numero"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="@id/fragment_formulario_assinante_nome"
            app:layout_constraintTop_toBottomOf="@id/fragment_formulario_assinante_nome" />

        <EditText
            android:id="@+id/fragment_formulario_assinante_numero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/numero"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@id/fragment_formulario_assinante_nome"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/fragment_formulario_assinante_endereco"
            app:layout_constraintTop_toTopOf="@id/fragment_formulario_assinante_endereco" />

        <EditText
            android:id="@+id/fragment_formulario_assinante_bairro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/bairro"
            app:layout_constraintEnd_toEndOf="@id/fragment_formulario_assinante_numero"
            app:layout_constraintStart_toStartOf="@id/fragment_formulario_assinante_nome"
            app:layout_constraintTop_toBottomOf="@id/fragment_formulario_assinante_endereco" />

        <EditText
            android:id="@+id/fragment_formulario_assinante_inicio_assinatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_calendario"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:hint="__/__/____"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="@id/fragment_formulario_assinante_nome"
            app:layout_constraintTop_toBottomOf="@id/fragment_formulario_assinante_bairro" />

        <TextView
            android:id="@+id/fragment_formulario_assinante_assinatura_ate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ate"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/fragment_formulario_assinante_inicio_assinatura"
            app:layout_constraintStart_toEndOf="@id/fragment_formulario_assinante_inicio_assinatura"
            app:layout_constraintTop_toTopOf="@id/fragment_formulario_assinante_inicio_assinatura" />

        <EditText
            android:id="@+id/fragment_formulario_assinante_termino_assinatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_calendario"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:hint="__/__/____"
            android:inputType="date"
            app:layout_constraintStart_toEndOf="@id/fragment_formulario_assinante_assinatura_ate"
            app:layout_constraintTop_toTopOf="@id/fragment_formulario_assinante_inicio_assinatura" />

        <EditText
            android:id="@+id/fragment_formulario_assinante_complemento"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/borda_preta"
            android:gravity="start"
            android:hint="@string/complemento"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="@id/fragment_formulario_assinante_nome"
            app:layout_constraintStart_toStartOf="@id/fragment_formulario_assinante_nome"
            app:layout_constraintTop_toBottomOf="@id/fragment_formulario_assinante_inicio_assinatura" />

        <Button
            android:id="@+id/fragment_formulario_assinante_salvar"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/salvar"
            android:textColor="@color/branco"
            app:layout_constraintEnd_toEndOf="@id/fragment_formulario_assinante_complemento"
            app:layout_constraintStart_toStartOf="@id/fragment_formulario_assinante_complemento"
            app:layout_constraintTop_toBottomOf="@id/fragment_formulario_assinante_complemento" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
